--- a/FAQ.html
+++ b/FAQ.html
@@ -84,7 +84,7 @@
       </main>
     
       <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
-      <script src="faq.js"></script>
+      <script src="FAQ.js"></script>
 
 
 
