--- a/index.html
+++ b/index.html
@@ -226,5 +226,18 @@
         </div>
       </footer>
     </div>
+
+<!-- Mobile Popup -->
+<div id="mobile-popup">
+  <div class="mobile-popup-box">
+    <p>⚠️ This site is best viewed on desktop for the full experience.</p>
+    <button id="close-popup">OK</button>
+  </div>
+</div>
+
+<!-- JS file -->
+<script src="mobile-popup.js"></script>
+
+    
   </body>
 </html>
