--- a/index.html
+++ b/index.html
@@ -227,16 +227,14 @@
       </footer>
     </div>
 
-<!-- Mobile Popup -->
-<div id="mobile-popup">
-  <div class="mobile-popup-box">
-    <p>⚠️ This site is best viewed on desktop for the full experience.</p>
-    <button id="close-popup">OK</button>
+<!-- Mobile Warning Popup -->
+<div id="mobileWarning" class="mobile-warning">
+  <div class="mobile-warning-content">
+    <p>⚠️ Hey! Our site scaling isn't perfect on mobile yet. We're working on it!</p>
+    <button id="closeWarning">Got it</button>
   </div>
 </div>
 
-<!-- JS file -->
-<script src="mobile-popup.js"></script>
 
     
   </body>
